# langchain-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: .dockerignore  Dockerfile  cli.py  main.py
app/ai/: chat.py
app/ai/components/: chain.py  llm.py  retriever.py
app/config/: settings.py
app/easemyai_index/: index.faiss  index.pkl
app/services/rag_setup/: processor.py  setup.py  vectordb.py
app/services/scraper/: scrape.py
